<resources>
    <string name="app_name">Life Manager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">Contact Details</string>

    <string name="item_title">contact email</string>
    <string name="item_namephone">contact name and phone</string>
    <string name="item_info">contact summary info</string>

    <!--ContactListActivity Action result-->
    <string name="delete_contact_ok">Delete contact succeed</string>
    <string name="delete_contact_fail">Delete contact fail</string>

    <!--ContactDetailFragment UI-->
    <string name="prompt_email">Email</string>
    <string name="prompt_nickname">Nick Name</string>
    <string name="prompt_mobilenumber">Mobile Number</string>
    <string name="prompt_contact_info">Personal Information</string>
    <!--ContactDetailFragment Action result-->
    <string name="save_contact_fail">Add/save contact fail</string>
    <!--ContactDetailFragment ui manipulation-->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>

</resources>
