<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="?android:attr/selectableItemBackground"
    android:padding="@dimen/md_keylines">

    <TextView
        android:id="@+id/contact_list_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/item_title"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/article_subheading" />

    <TextView
        android:id="@+id/contact_list_nickname_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_list_title"
        android:textColor="@color/medium_grey"
        android:ellipsize="end"
        android:singleLine="true"
        tools:text="@string/item_namephone"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/list_body" />

    <TextView
        android:id="@+id/contact_list_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_list_nickname_phone"
        android:textColor="@color/medium_grey"
        android:ellipsize="end"
        android:singleLine="true"
        tools:text="@string/item_info"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textSize="@dimen/list_body" />
</RelativeLayout>

</layout>