<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_detail_form"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.mvstar.edwinwu.lifemgr.ui.contact.detail.ContactDetailFragment">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_nickname"
            android:imeActionId="6"
            android:imeActionLabel=""
            android:imeOptions="actionUnspecified"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_mobilenumber"
            android:imeActionId="6"
            android:imeActionLabel=""
            android:imeOptions="actionUnspecified"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/contactinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_contact_info"
            android:imeActionId="6"
            android:imeActionLabel=""
            android:imeOptions="actionUnspecified"
            android:inputType="textMultiLine" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>